ubumirror (0.1.1ubuntu3) UNRELEASED; urgency=low

  * Use dh_clean instead of dh_prep in clean:.
  * Rename Vcs-Bzr to XS-Upstream-Vcs-Bzr since Ubuntu uploaders can't
    commit to it; since lp:ubuntu/ubumirror is derived from the upstream
    branch, it should be easy to resync.
  * Bump up Standards-Version to 3.8.3.

 -- Loïc Minier <loic.minier@ubuntu.com>  Tue, 16 Feb 2010 12:19:42 +0100

ubumirror (0.1.1ubuntu2) lucid; urgency=low

  * updated to include a default configuration in
    /etc/ubumirror.conf (thanks to Jonathan Davies)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:30:12 +0100

ubumirror (0.1ubuntu1) lucid; urgency=low

  * initial upload into lucid

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Feb 2010 17:27:45 +0100

ubumirror (0.0-0ubuntu1~ppa1) jaunty; urgency=low

  * Initial release.

 -- Jonathan Davies <jpds@ubuntu.com>  Thu, 5 Mar 2009 18:03:00 +0000