@@ -1,2 +1,0 @@
-etc/
-usr/bin
