@@ -1,0 +1,2 @@
+ubuarchive ubucdimage ubuports uburelease       usr/bin
+ubumirror.conf                                  etc
